--- a/tea.html
+++ b/tea.html
@@ -186,9 +186,9 @@
               </div>
 
 
-              <div class="flex-1 -space-y-100 my-10">
+              <div class="flex-1    my-10">
                 
-              <div class="card opacity-30 w-[223px] md:w-[323px] lg:w-[423px] h-full  lg:h-[233px] bg-base-100 rounded-sm">
+              <div class="card opacity-30 w-[223px] md:w-[323px]  lg:w-[423px] h-full  lg:h-[233px] bg-base-100 rounded-sm">
                 <figure><img class="w-[60px] absolute -top-6 -left-6  bg-white border-4 border-white rounded-full" src="images/client.png" alt=""></figure>
                 <div class="card-body">            
                   <p>We are providing the best and suitable home
@@ -200,7 +200,7 @@
                   </div>
                 </div>
               </div>
-              <div class="card absolute right-24 lg:top-1/2  lg:-translate-y-1/2   w-[223px] md:w-[323px] lg:w-[423px] h-full  lg:h-[233px] bg-base-100 rounded-sm">
+              <div class="card absolute right-64 md:right-72 lg:right-24 top-1/2 md:top-1/3 lg:top-1/2 -translate-y-[20%] md:translate-y-1/3 lg:-translate-y-1/2   w-[223px] md:w-[323px] lg:w-[423px] max-h-full  lg:h-[233px] bg-base-100 rounded-sm">
                 <figure><img class="w-[60px] absolute -top-6 -left-6  bg-white border-4 border-white rounded-full" src="images/client.png" alt=""></figure>
                 <div class="card-body">            
                   <p>We are providing the best and suitable home
