--- a/tea.html
+++ b/tea.html
@@ -79,28 +79,28 @@
           <!--card section-->
           <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-5 my-12">
 
-            <div class="card  w-full bg-base-100  bg-gradient-to-t from-base-100 to-base-200 font-manrope">
+            <div class="card  w-full bg-base-100 py-5 bg-gradient-to-t from-base-100 to-base-200 font-manrope">
               <figure><img src="images/tea-1.png" alt="Shoes" /></figure>
               <div class="card-body text-center">
                 <h2 class="card-title mx-auto font-bold">Milk Tea</h2>
                 <p class="opacity-80 font-medium">Creamer could be replaced by fresh milk</p>
               </div>
             </div>
-            <div class="card  w-full bg-base-100  bg-gradient-to-t from-base-100 to-base-200 font-manrope">
+            <div class="card  w-full bg-base-100 py-5 bg-gradient-to-t from-base-100 to-base-200 font-manrope">
               <figure><img src="images/tea-2.png" alt="Shoes" /></figure>
               <div class="card-body text-center">
                 <h2 class="card-title mx-auto font-bold">Milk Tea</h2>
                 <p class="opacity-80 font-medium">Creamer could be replaced by fresh milk</p>
               </div>
             </div>
-            <div class="card  w-full bg-base-100 bg-gradient-to-t from-base-100 to-base-200 font-manrope">
+            <div class="card  w-full bg-base-100 py-5 bg-gradient-to-t from-base-100 to-base-200 font-manrope">
               <figure><img src="images/tea-3.png" alt="Shoes" /></figure>
               <div class="card-body text-center">
                 <h2 class="card-title mx-auto font-bold">Milk Tea</h2>
                 <p class="opacity-80 font-medium">Creamer could be replaced by fresh milk</p>
               </div>
             </div>
-            <div class="card  w-full bg-base-100  bg-gradient-to-t from-base-100 to-base-200 font-manrope">
+            <div class="card  w-full bg-base-100 py-5 bg-gradient-to-t from-base-100 to-base-200 font-manrope">
               <figure><img src="images/tea-4.png" alt="Shoes" /></figure>
               <div class="card-body text-center">
                 <h2 class="card-title mx-auto font-bold">Milk Tea</h2>
@@ -114,7 +114,7 @@
       </div>
 
       <!--grid setion-->
-      <div class="container my-0 md:my-0 lg:my-20 mx-auto">
+      <div class="container my-0 md:my-0 lg:my-20  mx-auto">
 
        <div class="flex flex-col md:flex-col lg:flex-row gap-4 md:gap-6 lg:gap-10">
         <div class="grid grid-cols-2 md:grid-cols-2 flex-1 gap-6">
@@ -200,7 +200,7 @@
                   </div>
                 </div>
               </div>
-              <div class="card absolute right-64 md:right-72 lg:right-24 top-1/2 md:top-1/3 lg:top-1/2 -translate-y-[20%] md:translate-y-1/3 lg:-translate-y-1/2   w-[223px] md:w-[323px] lg:w-[423px] max-h-full  lg:h-[233px] bg-base-100 rounded-sm">
+              <div class="card absolute right-40 sm:right-64 md:right-72 lg:right-24 top-1/2 md:top-1/3 lg:top-1/2 -translate-y-[20%] md:translate-y-1/3 lg:-translate-y-1/2   w-[223px] md:w-[323px] lg:w-[423px] max-h-full  lg:h-[233px] bg-base-100 rounded-sm">
                 <figure><img class="w-[60px] absolute -top-6 -left-6  bg-white border-4 border-white rounded-full" src="images/client.png" alt=""></figure>
                 <div class="card-body">            
                   <p>We are providing the best and suitable home
